bk_ida/gobmkida/c2/gametree
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gametree/src/sgf/sgfnode.c:1418:1: error: use of undeclared identifier '_OWORD'
_OWORD *v5; // rax 
^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gametree/src/sgf/sgfnode.c:1418:9: error: use of undeclared identifier 'v5'
_OWORD *v5; // rax 
        ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gametree/src/sgf/sgfnode.c:1419:1: error: use of undeclared identifier '_OWORD'
_OWORD *v6; // rbp 
^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gametree/src/sgf/sgfnode.c:1419:9: error: use of undeclared identifier 'v6'
_OWORD *v6; // rbp 
        ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gametree/src/sgf/sgfnode.c:1421:1: error: use of undeclared identifier '_OWORD'
_OWORD *v8; // rax 
^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gametree/src/sgf/sgfnode.c:1421:9: error: use of undeclared identifier 'v8'
_OWORD *v8; // rax 
        ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gametree/src/sgf/sgfnode.c:1422:1: error: use of undeclared identifier '_OWORD'
_OWORD *v9; // rbx 
^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gametree/src/sgf/sgfnode.c:1422:9: error: use of undeclared identifier 'v9'
_OWORD *v9; // rbx 
        ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gametree/src/sgf/sgfnode.c:1426:7: error: expected expression
if (  enum mode != 115 ) 
      ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gametree/src/sgf/sgfnode.c:1462:1: error: use of undeclared identifier 'v5'
v5 = malloc( 0x20uLL); 
^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gametree/src/sgf/sgfnode.c:1463:7: error: use of undeclared identifier 'v5'
if ( !v5 ) 
      ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gametree/src/sgf/sgfnode.c:1469:1: error: use of undeclared identifier 'v6'
v6 = v5; 
^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gametree/src/sgf/sgfnode.c:1469:6: error: use of undeclared identifier 'v5'
v6 = v5; 
     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gametree/src/sgf/sgfnode.c:1470:2: error: use of undeclared identifier 'v5'
*v5 = 0LL; 
 ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gametree/src/sgf/sgfnode.c:1471:1: error: use of undeclared identifier 'v5'
v5[1] = 0LL; 
^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gametree/src/sgf/sgfnode.c:1472:15: error: use of undeclared identifier 'v5'
*( ( _QWORD *)v5 + 1) = parent; 
              ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gametree/src/sgf/sgfnode.c:1473:18: error: use of undeclared identifier 'v5'
*p = ( SGFNode *)v5; 
                 ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gametree/src/sgf/sgfnode.c:1474:19: error: use of undeclared identifier 'v5'
node( ( SGFNode *)v5); 
                  ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gametree/src/sgf/sgfnode.c:1480:1: error: use of undeclared identifier 'v8'
v8 = malloc( 0x20uLL); 
^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gametree/src/sgf/sgfnode.c:1481:7: error: use of undeclared identifier 'v8'
if ( !v8 ) 
      ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gametree/src/sgf/sgfnode.c:1483:1: error: use of undeclared identifier 'v9'
v9 = v8; 
^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gametree/src/sgf/sgfnode.c:1483:6: error: use of undeclared identifier 'v8'
v9 = v8; 
     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gametree/src/sgf/sgfnode.c:1484:2: error: use of undeclared identifier 'v8'
*v8 = 0LL; 
 ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gametree/src/sgf/sgfnode.c:1485:1: error: use of undeclared identifier 'v8'
v8[1] = 0LL; 
^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gametree/src/sgf/sgfnode.c:1486:15: error: use of undeclared identifier 'v8'
*( ( _QWORD *)v8 + 1) = v6; 
              ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gametree/src/sgf/sgfnode.c:1486:25: error: use of undeclared identifier 'v6'
*( ( _QWORD *)v8 + 1) = v6; 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gametree/src/sgf/sgfnode.c:1487:15: error: use of undeclared identifier 'v6'
*( ( _QWORD *)v6 + 2) = v8; 
              ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gametree/src/sgf/sgfnode.c:1487:25: error: use of undeclared identifier 'v8'
*( ( _QWORD *)v6 + 2) = v8; 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gametree/src/sgf/sgfnode.c:1488:19: error: use of undeclared identifier 'v8'
node( ( SGFNode *)v8); 
                  ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gametree/src/sgf/sgfnode.c:1490:1: error: use of undeclared identifier 'v6'
v6 = v9; 
^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gametree/src/sgf/sgfnode.c:1490:6: error: use of undeclared identifier 'v9'
v6 = v9; 
     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gametree/src/sgf/sgfnode.c:1493:1: error: use of undeclared identifier 'v6'
v6 = v9; 
^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gametree/src/sgf/sgfnode.c:1493:6: error: use of undeclared identifier 'v9'
v6 = v9; 
     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gametree/src/sgf/sgfnode.c:1497:25: error: use of undeclared identifier 'v6'
p_next = ( SGFNode **)( v6 + 1); 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gametree/src/sgf/sgfnode.c:1500:35: error: use of undeclared identifier 'v6'
gametree( p_next, *( ( SGFNode **)v6 + 1), 115); 
                                  ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gametree/src/sgf/sgfnode.c:1506:7: error: expected expression
if (  enum mode == 115 ) 
      ^
36 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gametree/src/obj/4/sgfnode.o] Error 1
